--- a/.github/workflows/2-build-kernel-busybox.yml
+++ b/.github/workflows/2-build-kernel-busybox.yml
@@ -2,9 +2,8 @@ name: "[2] Build Kernel + Busybox RootFS"
 
 on:
   workflow_dispatch:
-  workflow_run:
-    workflows: ["[1] Build ARM64 Toolchain"]
-    types: [completed]
+  push:
+    branches: [main]
 
 jobs:
   build-rootfs:
@@ -15,7 +14,6 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: toolchain-arm64
-        path: toolchain
 
     - name: Build Linux Kernel
       run: |
@@ -65,8 +63,8 @@ mount -t sysfs none /sys
 mount -t devtmpfs none /dev
 echo ""
 
-echo " Welcome to Zen Unix - Wildan Distro!"
-echo "ARM64 Linux by Wildan Hermawan "
+echo "🐧 Welcome to Zen Unix - Wildan Distro!"
+echo "📱 ARM64 Linux by Wildan Hermawan"
 echo ""
 
 exec /bin/sh
