--- a/.github/workflows/2-build-kernel-busybox.yml
+++ b/.github/workflows/2-build-kernel-busybox.yml
@@ -43,7 +43,7 @@ jobs:
 
     - name: Create minimal rootfs
       run: |
-        mkdir -p rootfs/{bin,dev,etc,proc,sys,usr/bin,usr/lib,tmp,home,wildan}
+        mkdir -p rootfs/{bin,dev,etc,proc,sys,usr/bin,usr/lib,tmp,home}
         cp busybox-1.36.1/busybox rootfs/bin/
         cp -r musl-1.2.4/install/usr/lib/* rootfs/usr/lib/
         
@@ -56,19 +56,17 @@ jobs:
 
     - name: Create init script
       run: |
-        cat > rootfs/init << 'EOF'
+        cat > rootfs/init << 'INIT_EOF'
 #!/bin/sh
 mount -t proc none /proc
 mount -t sysfs none /sys
 mount -t devtmpfs none /dev
 echo ""
-
 echo "🐧 Welcome to Zen Unix - Wildan Distro!"
 echo "📱 ARM64 Linux by Wildan Hermawan"
 echo ""
-
 exec /bin/sh
-EOF
+INIT_EOF
         chmod +x rootfs/init
 
     - name: Create bootable image
