--- a/.github/workflows/2-build-kernel-busybox.yml
+++ b/.github/workflows/2-build-kernel-busybox.yml
@@ -56,17 +56,16 @@ jobs:
 
     - name: Create init script
       run: |
-        cat > rootfs/init << 'INIT_EOF'
-#!/bin/sh
-mount -t proc none /proc
-mount -t sysfs none /sys
-mount -t devtmpfs none /dev
-echo ""
-echo "🐧 Welcome to Zen Unix - Wildan Distro!"
-echo "📱 ARM64 Linux by Wildan Hermawan"
-echo ""
-exec /bin/sh
-INIT_EOF
+        # Create init script without heredoc
+        echo '#!/bin/sh' > rootfs/init
+        echo 'mount -t proc none /proc' >> rootfs/init
+        echo 'mount -t sysfs none /sys' >> rootfs/init
+        echo 'mount -t devtmpfs none /dev' >> rootfs/init
+        echo 'echo ""' >> rootfs/init
+        echo 'echo "🐧 Welcome to Zen Unix - Wildan Distro!"' >> rootfs/init
+        echo 'echo "📱 ARM64 Linux by Wildan Hermawan"' >> rootfs/init
+        echo 'echo ""' >> rootfs/init
+        echo 'exec /bin/sh' >> rootfs/init
         chmod +x rootfs/init
 
     - name: Create bootable image
