--- a/.github/workflows/1-2-build-complete.yml
+++ b/.github/workflows/1-2-build-complete.yml
@@ -31,7 +31,8 @@ jobs:
           curl \
           xz-utils \
           git \
-          make
+          make \
+          qemu-system-aarch64
 
     - name: Download sources
       run: |
@@ -58,17 +59,57 @@ jobs:
         cd ..
 
     # ========== PHASE 2: KERNEL + ROOTFS ==========
-    - name: Build Linux Kernel (Optimized)
+    - name: Build Linux Kernel (FAST Optimized)
       run: |
         cd linux-6.6.9
+        
+        # Pakai tinyconfig atau minimal config untuk build cepat
         make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- defconfig
         
-        # Optimasi kernel
-        ./scripts/config --set-val CONFIG_MODULES n
-        ./scripts/config --set-val CONFIG_DEBUG_INFO n
-        ./scripts/config --set-val CONFIG_DEBUG_KERNEL n
+        # OPTIMASI MAXIMAL untuk build cepat
+        ./scripts/config --disable DEBUG_INFO
+        ./scripts/config --disable DEBUG_KERNEL
+        ./scripts/config --disable DEBUG_FS
+        ./scripts/config --disable PROFILING
+        ./scripts/config --disable KPROBES
+        ./scripts/config --disable UPROBES
+        ./scripts/config --disable KGDB
+        ./scripts/config --disable SCHED_DEBUG
+        ./scripts/config --disable FTRACE
+        ./scripts/config --disable FUNCTION_TRACER
+        ./scripts/config --disable DYNAMIC_DEBUG
+        ./scripts/config --disable MODULES
+        ./scripts/config --disable IKCONFIG
+        ./scripts/config --disable AUDIT
+        ./scripts/config --disable SECURITY
+        ./scripts/config --disable NETWORK_FILESYSTEMS
+        ./scripts/config --disable WIRELESS
+        ./scripts/config --disable NFC
+        ./scripts/config --disable BLUETOOTH
+        ./scripts/config --disable DRM
+        ./scripts/config --disable SOUND
+        ./scripts/config --disable HID
+        ./scripts/config --disable USB
+        ./scripts/config --disable PCI
+        ./scripts/config --disable IOMMU
+        ./scripts/config --disable VIRTUALIZATION
+        ./scripts/config --disable CRYPTO
+        ./scripts/config --disable BPF_SYSCALL
         
-        make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- -j$(nproc)
+        # Enable yang penting saja
+        ./scripts/config --enable DEVTMPFS
+        ./scripts/config --enable DEVTMPFS_MOUNT
+        ./scripts/config --enable TTY
+        ./scripts/config --enable SERIAL_OF_PLATFORM
+        ./scripts/config --enable ARM_AMBA
+        ./scripts/config --enable PL011_CLOCK
+        ./scripts/config --enable SERIAL_AMBA_PL011
+        ./scripts/config --enable SERIAL_AMBA_PL011_CONSOLE
+        
+        # Build dengan optimasi speed
+        echo "Building kernel with MAX optimization..."
+        make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- olddefconfig
+        time make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- -j$(nproc)
         cd ..
 
     - name: Build musl libc
@@ -80,25 +121,26 @@ jobs:
         make DESTDIR=$PWD/install install
         cd ..
 
-    - name: Build BusyBox (Non-Interactive Fix)
+    - name: Build BusyBox (Fixed - No Interactive)
       run: |
         tar xf sources/busybox-1.36.1.tar.bz2
         cd busybox-1.36.1
         
-        # Pakai defconfig dan disable interactive features
+        # Pakai defconfig
         make CROSS_COMPILE=aarch64-linux-gnu- defconfig
         
-        # Automated config changes - no interactive prompts
-        ./scripts/config --set-val CONFIG_STATIC y
-        ./scripts/config --set-val CONFIG_DESKTOP n
-        ./scripts/config --undefine CONFIG_FEATURE_IPV6
-        ./scripts/config --undefine CONFIG_TC
-        ./scripts/config --undefine CONFIG_IP
-        ./scripts/config --undefine CONFIG_NETWORKING
+        # FIX: Gunakan sed untuk modifikasi config (no interactive)
+        sed -i 's/CONFIG_STATIC=.*/CONFIG_STATIC=y/' .config
+        sed -i 's/CONFIG_FEATURE_IPV6=.*/# CONFIG_FEATURE_IPV6 is not set/' .config
+        sed -i 's/CONFIG_TC=.*/# CONFIG_TC is not set/' .config
+        sed -i 's/CONFIG_IP=.*/# CONFIG_IP is not set/' .config
+        sed -i 's/CONFIG_NETWORKING=.*/# CONFIG_NETWORKING is not set/' .config
+        sed -i 's/CONFIG_FEATURE_USE_INITTAB=.*/# CONFIG_FEATURE_USE_INITTAB is not set/' .config
         
         # Non-interactive build
+        echo "Building BusyBox static..."
         make CROSS_COMPILE=aarch64-linux-gnu- olddefconfig
-        make CROSS_COMPILE=aarch64-linux-gnu- -j$(nproc)
+        time make CROSS_COMPILE=aarch64-linux-gnu- -j$(nproc)
         cd ..
 
     - name: Create minimal rootfs
@@ -107,34 +149,55 @@ jobs:
         cp busybox-1.36.1/busybox rootfs/bin/
         cp -r musl-1.2.4/install/usr/lib/* rootfs/usr/lib/
         
+        # Pastikan busybox executable
+        chmod +x rootfs/bin/busybox
+        
         # Create busybox symlinks
         cd rootfs/bin
         for app in $(./busybox --list); do
-          ln -s busybox $app
+          ln -s busybox $app 2>/dev/null || true
         done
         cd ../..
 
     - name: Create init script
       run: |
-        echo '#!/bin/sh' > rootfs/init
-        echo 'mount -t proc none /proc' >> rootfs/init
-        echo 'mount -t sysfs none /sys' >> rootfs/init
-        echo 'mount -t devtmpfs none /dev' >> rootfs/init
-        echo 'echo ""' >> rootfs/init
-        echo 'echo "🐧 Welcome to Zen Unix - Wildan Distro!"' >> rootfs/init
-        echo 'echo "📱 ARM64 Linux by Wildan Hermawan"' >> rootfs/init
-        echo 'echo ""' >> rootfs/init
-        echo 'exec /bin/sh' >> rootfs/init
+        cat > rootfs/init << 'EOF'
+#!/bin/sh
+mount -t proc none /proc
+mount -t sysfs none /sys
+mount -t devtmpfs none /dev
+echo ""
+echo "🐧 Welcome to Zen Unix - Wildan Distro!"
+echo "📱 ARM64 Linux by Wildan Hermawan"
+echo "🚀 Kernel: $(uname -r)"
+echo ""
+exec /bin/sh
+EOF
         chmod +x rootfs/init
+
+    - name: Create essential device nodes
+      run: |
+        sudo mknod rootfs/dev/console c 5 1
+        sudo mknod rootfs/dev/null c 1 3
 
     - name: Create bootable image
       run: |
-        dd if=/dev/zero of=zen-unix.img bs=1M count=128
-        mkfs.ext4 zen-unix.img
+        dd if=/dev/zero of=zen-unix.img bs=1M count=64
+        mkfs.ext4 -F zen-unix.img
         mkdir -p mnt
         sudo mount -o loop zen-unix.img mnt
         sudo cp -r rootfs/* mnt/
         sudo umount mnt
+
+    - name: Test with QEMU (Quick Boot Test)
+      run: |
+        timeout 30s qemu-system-aarch64 \
+          -M virt -cpu cortex-a53 -smp 1 -m 256M \
+          -kernel linux-6.6.9/arch/arm64/boot/Image \
+          -drive file=zen-unix.img,format=raw \
+          -append "console=ttyAMA0 root=/dev/vda rw init=/init" \
+          -nographic \
+          -no-reboot || true
 
     - name: Upload final image
       uses: actions/upload-artifact@v4
@@ -143,3 +206,9 @@ jobs:
         path: |
           zen-unix.img
           linux-6.6.9/arch/arm64/boot/Image
+        retention-days: 7
+
+    - name: Show build times
+      run: |
+        echo " Build completed successfully!"
+        echo " Final artifacts: zen-unix.img + Kernel Image"
