--- a/.github/workflows/1-2-build-complete.yml
+++ b/.github/workflows/1-2-build-complete.yml
@@ -126,9 +126,11 @@ jobs:
         sed -i 's/CONFIG_IP=.*/# CONFIG_IP is not set/' .config
         sed -i 's/CONFIG_NETWORKING=.*/# CONFIG_NETWORKING is not set/' .config
         
-        # Non-interactive build
+        # FIX: Gunakan oldconfig dengan input automatic
+        yes "" | make CROSS_COMPILE=aarch64-linux-gnu- oldconfig
+        
+        # Build static
         echo "🔨 Building BusyBox static..."
-        make CROSS_COMPILE=aarch64-linux-gnu- olddefconfig
         time make CROSS_COMPILE=aarch64-linux-gnu- -j$(nproc)
         cd ..
 
